dply-aws.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sturdy-engine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sturdy-engine
  template:
    metadata:
      labels:
        app: sturdy-engine
    spec:
      containers:
        - name: sturdy-engine
          image: {baseImage}
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /sturdy-engine/manage/info
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /sturdy-engine/manage/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sturdy-engine
spec:
  type: NodePort
  selector:
    app: sturdy-engine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
